--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function sleep(miliseconds) {
 						</div>
 					</section>
 			
-				<!-- Our projects -->
+				<!-- Contact -->
 					<section id="contact" class="four" style="background-color: LightGreen">
 						<div class="container">
 								
@@ -282,10 +282,7 @@ function sleep(miliseconds) {
 </span><span lang="GU" style="font-family:Shruti,sans-serif">નાટક </span></p>
 
 <p>6.<span style="font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><span lang="GU" style="font-family:Shruti,sans-serif">પિક્ચર</span>,<span lang="GU" style="font-family:Shruti,sans-serif">&nbsp;
-વગેરે </span></p>
-<p>7.<span style="font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><span lang="GU" style="font-family:Shruti,sans-serif">Fashion show</span>,<span lang="GU" style="font-family:Shruti,sans-serif"> વગેરે&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">પિક્ચર</span>,<span lang="GU" style="font-family:Shruti,sans-serif"> વગેરે&nbsp;
 વગેરે </span></p>
 
 <p><b><span lang="GU" style="font-size:20pt;font-family:Shruti,sans-serif">યાત્રા પ્રવાસ </span></b></p>
@@ -315,20 +312,105 @@ function sleep(miliseconds) {
 </span><span lang="GU" style="font-family:Shruti,sans-serif">કપલ સાથેની અદ્દભૂત ગોવા ટુર.<br>126 ભાઈયો બેહેનો સાથે 5 દિવસની ગોવા ની ટુર માં બધાએ ખુબજ મજા કરી.
 ટુર અવીસ્મરણીય રહી.</span><br>
 <img  id="myImage" src="images/Goatrip.jpg"/ align="middle" width =50% height = 20%>
-<p><b><span style="font-size:20pt">Projects with committee members</span></b></p>
-<p>1.<span style="font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><span>Cooking demonstrations and competition using "Kiwi fruit" was held on 10th July.<br>The event was attended by 185 committee members who enjoyed the cooking show by cake and chocolate specialist Ms. Madhulika.<br>15 members participated in the competition</span><br>
-<img  id="myImage" src="images/GhoghariCooking.jpg"/ align="middle" width =20% height = 20%>
+
 						</div>
 					</section>
-			<section id="Team" class="five">
+			<section id="Team" class="five" style="background-color: LightBlue">
 						<div class="container">
 <p align="center" style="margin-bottom:0in;margin-bottom:.0001pt;text-align:center"><b><span lang="GU" style="line-height: 115%; font-family: Shruti, sans-serif;"><font size="6">શ્રી સુરત ઘોઘારી વીસાશ્રીમાળી જૈન મહિલા મંડળની</font></span></b></p>
 
 <p align="center" style="margin-bottom:0in;margin-bottom:.0001pt;text-align:center"><b><span lang="GU" style="line-height: 115%; font-family: Shruti, sans-serif;"><font size="6">સક્ષમ કારોબારી સમિતિ</font></span></b></p>
 
 <p align="center" style="text-align:center"><b><span style="font-size:12.0pt;line-height:115%">&nbsp;</span></b></p>
-<img  id="myImage" src="images/Ghoghari_committee_ppt.jpg" align="middle" width = 100% height = 100%>
+<img  id="myImage" src="images/FullCom.jpg"/ align="middle" width = 70% height = 20%>
+<p><b><font size="4"><span lang="GU" style="font-family:Shruti,sans-serif">પ્રમુખ</span>: <span lang="GU" style="font-family:Shruti,sans-serif">ઇન્દીરાબેન સુરેશભાઈ ચાવાળા</span>
+<br><img  id="myImage" src="images/Kaki.jpg"/ align="middle" width =10% height = 10%>
+
+
+<font size="5">
+<p><span lang="GU" style="font-family:Shruti,sans-serif"><b>ઉપપ્રમુખ </b></span></p>
+<font size="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/Hirakaki.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/Jasuben_dudhwala.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/naynaben_sanghvi.jpg"/ align="middle" width =100 height = 150>
+
+
+<p><span style="font-stretch:normal;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">હીરાબેન ચંપકભાઈ
+ચાવાળા </span><span style="font-stretch:normal;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">&nbsp;જસુબેન ધીરુભાઈ દુધવાળા </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">નયનાબેન સુબોધભાઈ
+સંઘવી</span></p>
+
+<br>
+<span lang="GU" style="font-family:Shruti,sans-serif">માનદમંત્રી</span>: <span lang="GU" style="font-family:Shruti,sans-serif">રીટાબેન સંજયભાઈ
+પારેખ</span></font></b><br>
+<img  id="myImage" src="images/Rita.jpg"/ align="middle" width = 10% height = 10%></p>
+
+
+<p><span lang="GU" style="font-family:Shruti,sans-serif"><font size="5"><b>સહમંત્રી </b></span></p>
+<font size="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/villasben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;<img  id="myImage" src="images/raginiben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">વિલાસબેન
+કાન્તીભાઈ </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">રાગીણીબેન
+રમેશભાઈ</span></p>
+
+<p><span lang="GU" style="font-family:Shruti,sans-serif"><b><font size="5">ખજાનચી </b></span></p>
+<font size="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/jyotiben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;<img  id="myImage" src="images/rasilaben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">જ્યોતિબેન
+દિલીપભાઈ </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">રસીલાબેન
+પ્રમોદભાઈ</span></p>
+
+<p><span lang="GU" style="font-family:Shruti,sans-serif"><b><font size="5">કમિટી બહેનો </b></span></p>
+<font size="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/naynafai.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/subhadraben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/maltiben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/bhavnaben.jpg"/ align="middle" width =100 height = 150>
+<p><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">નયનાબેન શરદભાઈ </span>
+<span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">સુભદ્રાબેન
+ચંદુભાઈ </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">માલતીબેન
+સુરેશભાઈ </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">ભાવનાબેન
+દિનેશભાઈ </span></p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  id="myImage" src="images/Pravinaben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/ramilaben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/Sarojben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/Champaben.jpg"/ align="middle" width =100 height = 150>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img  id="myImage" src="images/Alkaben.jpg"/ align="middle" width =100 height = 150>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">
+</span><span lang="GU" style="font-family:Shruti,sans-serif">પ્રવિણાબેન
+ભરતભાઈ </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">રમીલાબેન અરુણભાઈ</span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">સરોજબેન ધીરુભાઈ દોશી  </span><span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">ચંપાબેન હરિભાઈ શાહ</span>
+<span style="font-stretch:normal;font-size:7pt;line-height:normal;font-family:Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span lang="GU" style="font-family:Shruti,sans-serif">અલકાબેન વિજયભાઈ</span></p>
 
 
 						</div>
@@ -360,10 +442,22 @@ function sleep(miliseconds) {
 <section id="contactus" class="six" style="background-color: LightGreen">
                                                 <div class="container">
 <font size="5"><b>Contact us</b> <br>
-<font size = "3">If you have any questions or suggestions, kindly contact us at contactus@suratghogharimahilamandal.com<br>
-<font size = "3">If you want to add your speciality, kindly contact us at speciality@suratghogharimahilamandal.com<br>
-<font size = "3">If you want to add your matrimonial biodata, kindly contact us at biodata@suratghogharimahilamandal.com<br>
-		
+<font size = "3">If you have any questions or suggestions, kindly contact us using the form below.<br>
+<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+	<div class="row">
+		<label for="name">Your name:</label><br />
+		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+	</div>
+	<div class="row">
+		<label for="email">Your email:</label><br />
+		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+	</div>
+	<div class="row">
+		<label for="message">Your message:</label><br />
+		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+	</div>
+	<input id="submit_button" type="submit" value="Send email" />
+</form>		
 </div>
 </section>
 			</div>
